chore: revision for Heroku deploy

--- a/package.json
+++ b/package.json
@@ -12,34 +12,33 @@
 		"prettier": "prettier --write './**/*.ts'",
 		"start": "ts-node -r tsconfig-paths/register server.ts",
 		"ci:test": "jest --runInBand",
-		"ci:migrate": "prisma migrate dev",
-		"build": "ts-node -r tsconfig-paths/register server.ts"
+		"ci:migrate": "prisma migrate dev"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/express": "^4.17.13",
-		"@types/gapi": "^0.0.42",
 		"@types/jest": "^28.1.1",
-		"@types/node": "^17.0.40",
-		"@types/nodemailer": "^6.4.4",
 		"@types/supertest": "^2.0.12",
 		"jest": "^28.1.0",
 		"prettier": "^2.6.2",
 		"prisma": "^4.0.0",
 		"supertest": "^6.2.3",
-		"ts-jest": "^28.0.4",
-		"ts-node": "^10.8.1",
-		"typescritp": "^1.0.0"
+		"ts-jest": "^28.0.4"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.0.0",
+		"@types/express": "^4.17.13",
+		"@types/gapi": "^0.0.42",
+		"@types/node": "^17.0.40",
+		"@types/nodemailer": "^6.4.4",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"googleapis": "^104.0.0",
 		"nodemailer": "^6.7.5",
 		"pino": "^8.1.0",
-		"tsconfig-paths": "^4.0.0"
+		"ts-node": "^10.8.1",
+		"tsconfig-paths": "^4.0.0",
+		"typescript": "^4.7.4"
 	}
 }
