fix: package.json missing seed feature

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
 	"devDependencies": {
 		"@types/jest": "^28.1.1",
 		"@types/supertest": "^2.0.12",
