--- a/package.json
+++ b/package.json
@@ -22,24 +22,23 @@
 		"seed": "ts-node prisma/seed.ts"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.18.6",
-		"@babel/node": "^7.18.6",
-		"@babel/plugin-proposal-class-properties": "^7.18.6",
-		"@babel/plugin-transform-runtime": "^7.18.6",
-		"@babel/preset-env": "^7.18.6",
-		"@babel/preset-typescript": "^7.18.6",
-		"@types/babel__core": "^7.1.19",
 		"@types/jest": "^28.1.1",
 		"@types/supertest": "^2.0.12",
 		"jest": "^28.1.0",
 		"prettier": "^2.6.2",
-		"prisma": "^4.0.0",
 		"supertest": "^6.2.3",
 		"ts-jest": "^28.0.4"
 	},
 	"dependencies": {
+		"@babel/cli": "^7.18.6",
+		"@babel/core": "^7.18.6",
+		"@babel/node": "^7.18.6",
+		"@babel/plugin-transform-runtime": "^7.18.6",
+		"@babel/preset-env": "^7.18.6",
+		"@babel/preset-typescript": "^7.18.6",
 		"@babel/runtime": "^7.18.6",
 		"@prisma/client": "^4.0.0",
+		"@types/babel__core": "^7.1.19",
 		"@types/express": "^4.17.13",
 		"@types/gapi": "^0.0.42",
 		"@types/node": "^17.0.40",
@@ -49,6 +48,7 @@
 		"googleapis": "^104.0.0",
 		"nodemailer": "^6.7.5",
 		"pino": "^8.1.0",
+		"prisma": "^4.0.0",
 		"ts-node": "^10.8.1",
 		"tsconfig-paths": "^4.0.0",
 		"typescript": "^4.7.4"
