--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
 		"ts-jest": "^28.0.4"
 	},
 	"dependencies": {
+		"@aws-sdk/client-cognito-identity": "^3.128.0",
+		"@aws-sdk/client-s3": "^3.128.0",
+		"@aws-sdk/credential-provider-cognito-identity": "^3.128.0",
+		"@aws-sdk/s3-request-presigner": "^3.130.0",
+		"@aws-sdk/types": "^3.127.0",
 		"@babel/cli": "^7.18.6",
 		"@babel/core": "^7.18.6",
 		"@babel/node": "^7.18.6",
@@ -43,6 +48,8 @@
 		"@types/gapi": "^0.0.42",
 		"@types/node": "^17.0.40",
 		"@types/nodemailer": "^6.4.4",
+		"aws-cli": "^0.0.2",
+		"aws-sdk": "^2.1172.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"googleapis": "^104.0.0",
