--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@types/nodemailer": "^6.4.4",
 		"aws-cli": "^0.0.2",
 		"aws-sdk": "^2.1172.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"googleapis": "^104.0.0",
