--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-session": "^1.17.3",
 		"googleapis": "^104.0.0",
 		"nodemailer": "^6.7.5",
+		"passport": "^0.6.0",
+		"passport-auth0": "^1.4.2",
 		"pino": "^8.1.0",
 		"prisma": "^4.0.0",
 		"ts-node": "^10.8.1",
