chore: update of authentication

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"nodemailer": "^6.7.5",
 		"passport": "^0.6.0",
 		"passport-auth0": "^1.4.2",
+		"passport-local": "^1.0.0",
 		"pino": "^8.1.0",
 		"prisma": "^4.0.0",
 		"ts-node": "^10.8.1",
