--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@types/gapi": "^0.0.42",
 		"@types/http-errors": "^1.8.2",
 		"@types/jest": "^28.1.1",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/node": "^17.0.40",
 		"@types/nodemailer": "^6.4.4",
 		"@types/supertest": "^2.0.12",
